# tiksrv

./: .gitmodules  CMakeLists.txt  README.md
include/: app.h  app_callbacks.h  config.h  error.h  log.h
include/net/: address.h  memory.h  message.h  read_state_machine.h  tcp_client.h  tcp_client_callbacks.h  tcp_listener.h  tcp_listener_callbacks.h
include/utils/: validation.h
src/: CMakeLists.txt  app.c  app_callbacks.c  config.c  error.c  log.c  main.c  net_address.c  net_memory.c  net_message.c  net_read_state_machine.c  net_tcp_client.c  net_tcp_client_callbacks.c  net_tcp_listener.c  net_tcp_listener_callbacks.c
src/app/: CMakeLists.txt
src/app/include/app/: app.h  app.hpp  callbacks.h  config.hpp  server.hpp  session.hpp  shared.h
src/app/src/: app.c  app.cpp  callbacks.c  config.cpp  server.cpp
src/app/src/impl/: callbacks.h  shared.h
src/cmake/: FindGLIB.cmake
src/commands/: CMakeLists.txt
src/commands/include/commands/: command.h  request.h  response.h
src/commands/include/commands/impl/: request.h  response.h
src/commands/src/: command.c  echo_command.c  request.c  response.c
src/config/: CMakeLists.txt
src/config/include/config/: config.h  config.hpp  constants.h
src/config/src/: config.c  config.cpp  ini.c
src/eztik/: CMakeLists.txt
src/eztik/include/eztik/: commands.h  config.h  eztik.h  hooks.h  response.h  session.h
src/eztik/include/eztik/routeros/: api.h  api_sentence.h
src/eztik/src/: api.c  api_close.c  api_open.c  api_write.c  export.c  eztik.c  hooks.c  plugin.c  ros_api.c  ros_api_close_command.c  ros_api_open_command.c  ros_api_send.c  ros_api_send_raw_command.c  ros_api_sentence.c  ros_version_command.c  session.c
src/html/: admin.html
src/interop/: CMakeLists.txt
src/interop/include/interop/: command.hpp  dll.h  filesystem.h  plugin.h  plugin.hpp  plugin_loader.hpp
src/interop/src/: dll.c  filesystem.c  plugin.c  plugin_loader.cpp
src/lib/: CMakeLists.txt
src/log/: CMakeLists.txt
src/log/include/log/: colors.h  core.hpp  error.h  logger.h  logger.hpp
src/log/src/: core.cpp  error.c  logger.c
src/main/: CMakeLists.txt
src/main/src/: main.c  main.cpp
src/net/: CMakeLists.txt
src/net/include/net/: address.h  memory.h  message.h  message.hpp  read_state_machine.h  read_state_machine.hpp  tcp_client.h  tcp_client.hpp  tcp_client_callbacks.h  tcp_listener.h  tcp_listener.hpp  tcp_listener_callbacks.h  tcp_server.hpp
src/net/src/: address.c  memory.c  message.c  message.cpp  read_state_machine.c  read_state_machine.cpp  tcp_client.c  tcp_client.cpp  tcp_client_callbacks.c  tcp_listener.c  tcp_listener.cpp  tcp_listener_callbacks.c  tcp_server.cpp
src/net/src/impl/: tcp_client_callbacks.h  tcp_listener_callbacks.h
src/plugins/: CMakeLists.txt
src/plugins/core/: CMakeLists.txt
src/plugins/core/include/core/: core_plugin.hpp
src/plugins/core/include/core/commands/: echo.hpp
src/plugins/core/src/: core_plugin.cpp  echo_command.cpp
src/plugins/eztik/: CMakeLists.txt
src/plugins/eztik/commands/: CMakeLists.txt
src/plugins/eztik/commands/include/eztik/commands/: api_load_hotspot_users.hpp  api_open.hpp  api_send.hpp  response.hpp  session_required.hpp
src/plugins/eztik/commands/include/eztik/commands/api/: hotspot_user.hpp  load.hpp  open.hpp  send.hpp
src/plugins/eztik/commands/proto/: Makefile  api_send.proto
src/plugins/eztik/commands/proto/models/: hotspot_user.proto
src/plugins/eztik/commands/src/: api_load_hotspot_users_command.cpp  api_open_command.cpp  api_send_command.cpp  session_required_command.cpp
src/plugins/eztik/data/: CMakeLists.txt
src/plugins/eztik/data/include/eztik/data/: api_repository.hpp  type_traits.hpp
src/plugins/eztik/data/include/eztik/data/models/: hotspot_user.hpp
src/plugins/eztik/eztik/: CMakeLists.txt
src/plugins/eztik/eztik/include/eztik/: plugin.hpp
src/plugins/eztik/eztik/src/: plugin.cpp
src/plugins/eztik/include/eztik/: config.hpp  error.hpp  eztik_plugin.hpp  response.hpp  session.hpp
src/plugins/eztik/include/eztik/commands/: api_open.hpp  api_send.hpp  session_required.hpp
src/plugins/eztik/include/eztik/routeros/: api.hpp  api_read_state_machine.hpp  sentence.hpp
src/plugins/eztik/include/eztik/services/: sessions.hpp
src/plugins/eztik/routeros/: CMakeLists.txt
src/plugins/eztik/routeros/include/eztik/routeros/: api.hpp  api_read_state_machine.hpp  commands.hpp  sentence.hpp  util.hpp
src/plugins/eztik/routeros/src/: api.cpp  sentence.cpp  util.cpp
src/plugins/eztik/services/: CMakeLists.txt
src/plugins/eztik/services/include/eztik/services/: sessions.hpp
src/plugins/eztik/services/src/: session.cpp  sessions_service.cpp
src/plugins/eztik/shared/: CMakeLists.txt
src/plugins/eztik/shared/include/eztik/: config.hpp  error.hpp
src/plugins/eztik/shared/src/: error.cpp
src/plugins/eztik/src/: api_open_command.cpp  api_send_command.cpp  error.cpp  eztik_plugin.cpp  routeros_api.cpp  routeros_api_read_state_machine.cpp  routeros_sentence.cpp  routeros_util.cpp  session.cpp  session_required_command.cpp  sessions_service.cpp
src/services/: CMakeLists.txt
src/services/include/services/: config_manager.hpp  container.h  hooks_manager.h  hooks_manager.hpp  service.hpp  services_manager.hpp
src/services/src/: container.c  hooks_manager.c  hooks_manager.cpp  services_manager.cpp
src/shared/: CMakeLists.txt
src/shared/include/util/: memory.h  string.h  validation.h
src/shared/src/: memory.c  string.c
src/tests/: CMakeLists.txt  commands_request_tests.c  commands_response_tests.c  message_tests.c
